# bash_labs

./: .gitignore  README.md  init.sh  readme.md
34_java/java_2/: inserts.sql
3_cpp/: CMakeLists.txt  main.cpp
3_cpp/hashtasks/: hashtable_linear.hpp  plan.txt
3_cpp/labs_3/: .gitignore
3_cpp/labs_3/pointers/: CMakeLists.txt  unique.cpp
3_cpp/labs_3/sequence/: ArraySequence.cpp  LinkedList.hpp  Sequence.hpp
3_cpp/labs_3/sorting/: quick_shell.hpp
3_cpp/labs_3/testPointers/: CMakeLists.txt  TestPointers.cpp
3_cpp/labs_3/testSequences/: CMakeLists.txt  TestDynamic.cpp
3_cpp/sequence/: DynamicArray.hpp
3_cpp/sorting/: sort_utilities.hpp
3_cpp/testSortings/: CMakeLists.txt  TestSorting.cpp
4_osan/bash_0/: clr
4_osan/java_1/: readme.md  solution.sql  Лабораторная работа №2.docx
4_osan/lab_0/: disabled.txt
4_osan/lab_2/: file2
4_osan/lab_3/: .gitignore
4_osan/lab_5/: a.out  init  readme.md
4_osan/labs_4/: README.md
4_osan/labs_4/bash_0/: program
4_osan/labs_4/lab_2/: readme.md
4_osan/labs_4/lab_3/: readme.md
4_osan/labs_4/lab_4/: Dockerfile (light).txt
4_osan/labs_4/lab_5/: index.html
5_cg/: README.md
5_cg/lab3/: main.cpp
5_cg/lab_1/: CMakeLists.txt  README.md
5_cg/lab_1/src/: main.cpp
5_cg/lab_2/: .gitignore  CMakeLists.txt  README.md
5_cg/lab_2/src/: main.cpp  utils.hpp
5_cg/lab_2/tests/: test.sh
5_qml/qtlabs_5/: README.md
5_qml/qtlabs_5/lab_1/: main.py
bash_0/: readme.md
java_0/: hw_5.docx  readme.md  tasks.sql
java_1/: inserts_bd2.sql  readme.md
lab_0/: barelycopy.txt  clr.sh  fopen_sol.c  mmap_sol.c  readme.md  sendfile_sol.c  simple.txt
lab_1/: login.cpp  readme.md
lab_2/: file1  init.sh  simple.c
labs_3/: README.md
labs_3/hashtasks/: hashtable_bucket.hpp  plan.txt
labs_3/pointers/: shared.hpp  unique.hpp
labs_3/sequence/: ArraySequence.hpp  CMakeLists.txt  DynamicArray.cpp
labs_3/sorting/: CMakeLists.txt  bubble_merge.hpp  bubble_sort.cpp
labs_3/testSequences/: TestArraySeq.cpp  TestLinked.cpp
labs_4/: README.md
labs_4/java_2/: convert_to_insert.py  readme.md  table.txt
labs_4/lab_1/: readme.md
labs_4/lab_2/: simple.c
labs_4/lab_3/: task.sh
labs_4/lab_4/: Dockerfile (heavy).txt  readme.md
labs_4/lab_4/app/: file1  file2  file3
labs_4/lab_5/: http_server.c  readme.md
qtlabs_5/: README.MD  README.md  requitements.txt
qtlabs_5/lab_0/: condition.md  main.qml
qtlabs_5/lab_1/: condition.md
